2003-09-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PdfDoc.py: handle multiple image classes defined
	by reportlab

2003-09-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (new_database_response,read_file,save_file): 
	Pass parent window to DbPrompter.
	* src/DbPrompter.py (__init__): Accept optional parent argument;
	(show): Make the window the transient for the main window. 
	* src/gramps.glade: Make Opendb dialog modal. 

2003-09-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: re-present the open dialog box on
	a failure to open a file.
	* src/gramps.glade: change Home button from stock version
	to something we can translate
	* src/const.py.in: Add "Alternate Marriage" as a family 
	event type.

2003-09-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectObject.py: Add module. 
	* src/choose.glade: Add select_object dialog. 
	* src/plugins/SimpleBookTitle.py: Add image options.

2003-09-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FilterEditor.py (MyInteger): Fix type conversions. 

2003-09-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FilterEditor.py (MyPlaces): fix handling of get_text,
	set_text tasks. Use the default from the base class.

2003-09-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in: Switch to the next release's version in CVS. 
	Replace build-date with the last ChangeLog entry date in release number.

2003-09-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (BookList.save): Write encoding. 
	* src/plugins/FilterEditor.py (MyBoolean): Add class. 
	(FilterEditor.edit_rule): Implement Inclusive option.
	* src/GenericFilter.py: Add categories and descriptions. Implement
	Inclusive option. 

2003-09-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: backout yesterday's change

2003-09-03  Don Allingham  <dallingham@users.sourceforge.net>